# ai_sql_genrator

./: README.md  dockerfile  final_answer.md  pyproject.toml  requirements.txt
data/: budget.db
src/ai_sql_genrator/: crew.py  main.py
src/ai_sql_genrator/config/: agents.yaml  tasks.yaml
src/ai_sql_genrator/tools/: current_date_tool.py  custom_tool.py  db_schema_reader_tool.py
