[project]
name = "ai_sql_genrator"
version = "0.1.0"
description = "ai-sql-genrator using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.148.0,<1.0.0"
]

[project.scripts]
ai_sql_genrator = "ai_sql_genrator.main:run"
run_crew = "ai_sql_genrator.main:run"
train = "ai_sql_genrator.main:train"
replay = "ai_sql_genrator.main:replay"
test = "ai_sql_genrator.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
